--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
     <!-- ES Module Shim for transformers.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.10.0/es-module-shims.min.js" integrity="sha512-bF97E4xm7e9Yb5eRVKSs7BmMJ2kJ41k+B3jpBE8M0JvSTQ3e5OVu5iLecr5lM3g9Iq48zD/ODJyQsBf3K1/mxg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
+  <style>
+    /* Custom scrollbar for the summary box to ensure it's always visible */
+    .summary-content::-webkit-scrollbar {
+      width: 8px;
+    }
+    .summary-content::-webkit-scrollbar-track {
+      background: #1e293b; /* slate-800 */
+    }
+    .summary-content::-webkit-scrollbar-thumb {
+      background-color: #475569; /* slate-600 */
+      border-radius: 4px;
+      border: 2px solid #1e293b; /* slate-800 */
+    }
+    .summary-content::-webkit-scrollbar-thumb:hover {
+      background-color: #64748b; /* slate-500 */
+    }
+    /* For Firefox */
+    .summary-content {
+      scrollbar-width: thin;
+      scrollbar-color: #475569 #1e293b;
+    }
+  </style>
+
   <script type="importmap">
   {
     "imports": {
@@ -305,7 +328,7 @@
                           <h3 className="text-xl font-bold text-sky-400">{fileName}</h3>
                       </div>
                       <h4 className="text-lg font-semibold text-slate-200 mb-2">Summary</h4>
-                      <div className="bg-slate-800 p-4 rounded-lg max-h-60 overflow-y-auto prose prose-invert prose-sm">
+                      <div className="summary-content bg-slate-800 p-4 rounded-lg max-h-96 overflow-y-auto prose prose-invert prose-sm">
                         <p>{summary}</p>
                       </div>
                   </div>
